[gd_scene load_steps=12 format=3 uid="uid://b0fl0q5ein34y"]

[ext_resource type="Script" uid="uid://bt3lo07y6o31f" path="res://scripts/invader.gd" id="1_ro8pn"]
[ext_resource type="Texture2D" uid="uid://cjo5sm6uemp8i" path="res://assets/sprites/characters/enemys/invader.png" id="2_2qwnf"]
[ext_resource type="PackedScene" uid="uid://cr5rxw3y74s46" path="res://scenes/particles/spriteExplosion.tscn" id="2_c36bj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c36bj"]
atlas = ExtResource("2_2qwnf")
region = Rect2(0, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro8pn"]
atlas = ExtResource("2_2qwnf")
region = Rect2(0, 8, 16, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_dwoi8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c36bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro8pn")
}],
"loop": true,
"name": &"sprite",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_cpynn"]
length = 0.001

[sub_resource type="Animation" id="Animation_uihqj"]
resource_name = "sprite"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_dwoi8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"sprite"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jmvj"]
_data = {
&"RESET": SubResource("Animation_cpynn"),
&"walk": SubResource("Animation_uihqj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qwnf"]
size = Vector2(16.666666, 13.333333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c36bj"]
size = Vector2(22.5, 16.666666)

[node name="invader" type="CharacterBody2D"]
z_index = 98
scale = Vector2(1.2, 1.2)
script = ExtResource("1_ro8pn")
deathParticle = ExtResource("2_c36bj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_dwoi8")
animation = &"sprite"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3jmvj")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.8333333, 0)
shape = SubResource("RectangleShape2D_2qwnf")

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(-1.25, -2.9802322e-07)
shape = SubResource("RectangleShape2D_c36bj")

[node name="directionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_entered" from="hitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="directionTimer" to="." method="_on_direction_timer_timeout"]
